--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
     "daisyui": "^5.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
