--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
     "daisyui": "^5.0.9",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
